# regenbogen

./: .agent-box-template.md  .gitignore  AGENT-SETUP.md  AGENTS-COMPACT.md  AGENTS.md  BROWNFIELD-MIGRATION.md  INSTALLATION.md  LICENSE  MODELL-README.md  README.md  ausfuehrungsmandat-protokoll.md  blocker-und-abbruch-protokoll.md  erfahrungsbericht-protokoll.md  glossar-README.md  glossar-domain.md  glossar-meta.md  glossar-system.md  grundsatz.md  learning-matrix.md  migration-bridges.md  package-schema.md  preflight-checkliste.md  pyproject.toml  regelmatrix.md  regentropfen-und-wetterdaten.md  sprechakt-protokoll.md  task-schnitt.md  test-obligations.md  tutorial.md
.agent-box/: instantiation.md
.agent-box/migrations/: 2026-06-21-v0.2.3-to-v0.2.7-migration.md  2026-06-27-v0.2.7-to-v0.3.0-evidence.md  2026-06-28-v0.3.0-to-v0.3.10-evidence.md
analysen/: chat.txt  priming-analyse.md
docs/plans/: 2026-06-12-gui-einstiegspunkt.md  2026-06-13-sonnenstand-winkelmodell.md  2026-06-14-tropfenqualitaet-sichtbarkeitsmodell.md  2026-06-20-blickrichtung.md  2026-06-20-echte-plz-bestimmung.md  2026-06-20-modell-readme-und-framing.md  2026-06-20-priming-verbesserungen.md  2026-06-20-readme-programmdoku.md  2026-06-20-sonnenscheinanteil-begriffsklaerung.md  2026-06-20-tagesprognose.md  2026-06-20-uv-projektkonfiguration.md  2026-06-21-backflow-empfehlungen-template-system.md  2026-06-21-brownfield-migration-v0.2.3-to-v0.2.7.md  2026-06-27-brownfield-migration-v0.2.7-to-v0.3.0.md  (+3 more)
tools/: check_agent_docs_consistency.py  check_import_layers.py  resolve_test_obligations.py
(+72 files in other folders)
