[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "regenbogen"
version = "0.1.0"
description = "Berechnet die Regenbogen-Wahrscheinlichkeit fuer einen Ort."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19",
    "pytest>=9.1",
    "ruff>=0.14",
]

[project.scripts]
regenbogen = "regenbogen.cli.main:main"
regenbogen-gui = "regenbogen.cli.gui_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
mypy_path = "src"
packages = ["regenbogen"]
